--- a/search_page.css
+++ b/search_page.css
@@ -1,7 +1,9 @@
+/* MAIN SEARCH PAGE CSS COMPLETE */
+
 a, ul {
     text-decoration: none;
     list-style: none;
-    color: rgba(128, 128, 128, 1);;
+    color: rgba(128, 128, 128, 1);
 }
 
 
@@ -33,36 +35,60 @@ div img {
 }
 
 
-input.search-form {
-    display: block;
-    width: 574px;
-    height: 40px;
+form {
+
+    width: 570px;
+    height: 45px;
     margin: auto;
-    border-radius: 30px;
     outline: none;
+    border-radius: 30px;
     border: 1px solid rgba(128, 128, 128, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
-.search-form:focus {
+
+.search-form {
+    width: 475px;
+    height: 30px;
+    outline: none;
+    border: none;
+    margin-left: 15px;
+
+}
+
+#search-icon {
+
+    font-size:20px;
+    color: rgba(128, 128, 128, 0.7);
+    margin-top: 3px;
+}
+
+#mic-icon {
+    margin-left: 8px;
+}
+
+
+
+.form:focus, .form:hover {
     box-shadow: 1px 1px 5px grey;
 }
 
-.search-form:hover {
-    box-shadow: 1px 1px 5px grey;
-}
+
 
 .btn-bar {
     width: 330px;
-    margin: auto;
     margin-top: 35px;
     border-radius: 30px;
+    position: absolute;
+    top: 315px;
 }
 
 .btn {
     width: 137px;
     height: 37px;
     margin-left: 10px;
-
     background-color: #f2f2f2;
     border: 1px solid #f2f2f2;
     border-radius: 4px;
@@ -87,7 +113,7 @@ input.search-form {
 p {
     width: 200px;
     margin: auto;
-    margin-top: 25px;
+    margin-top: 85px;
 }
 
 footer li {
@@ -98,8 +124,9 @@ footer li {
 
 .above-footer {
     position: fixed;
-    bottom: 25px;
+    bottom: 30px;
     left: -10px;
+    font-size: 15px;
 
 }
 
@@ -107,9 +134,8 @@ footer li {
 .l-footer, .r-footer {
 
     position: fixed;
-    bottom: 0px;
-    /* background-color: rgba(128, 128, 128, 0.2);
-    border-top:  rgba(128, 128, 128, 1); */
+    bottom: -7px;
+    font-size: 14px;
   
 }
 
