--- a/image_search.css
+++ b/image_search.css
@@ -50,25 +50,40 @@ form {
 }
 
 .search-form {
-    width: 475px;
+    width: 385px;
     height: 30px;
     outline: none;
     border: none;
     margin-left: 15px;
 
 }
-
-#search-icon {
+#l-search-icon, #camera-icon, #mic-icon, #r-search-icon {
+    margin-top: 3px;
+    margin-left: 15px;
+}
+#l-search-icon {
 
     font-size:20px;
     color: rgba(128, 128, 128, 0.7);
-    margin-top: 3px;
+    margin-left: 0px;
+   
 }
 
+#camera-icon {
+    font-size:24px;
+    color: rgba(128, 128, 128, 1);
+    
+}
 #mic-icon {
     margin-left: 8px;
 }
 
+#r-search-icon {
+
+    font-size:23px;
+    color: #4285f4;
+    
+}
 
 
 .form:focus, .form:hover {
@@ -120,33 +135,58 @@ p {
 footer li {
     display: inline-block;
     overflow: auto;
+    margin-left: 26px;
+   
 }
 
 
 .above-footer {
-    position: fixed;
-    bottom: 25px;
-    left: -10px;
+    margin-left: -40px;
+    margin-bottom: 5px;
+    font-size: 15px;
+    
 
 }
 
 
 .l-footer, .r-footer {
 
-    position: fixed;
-    bottom: 0px;
-    /* background-color: rgba(128, 128, 128, 0.2);
-    border-top:  rgba(128, 128, 128, 1); */
+    /* position: fixed;
+    bottom: -7px; */
+    font-size: 14px;
+    
   
 }
 
 .l-footer {
-    left: 0px;
-    margin-left: -12px;
+    /* left: 0px; */
+    margin-left: -40px;
 }
 
 .r-footer {
-    right: 0px;
+    
     margin-right: 26px;
+   
 }
+
+footer {
+    position: absolute;
+    bottom: 0px;
+    background-color: #f2f2f2;
+    border-top: 1px solid rgba(128, 128, 128, 0.1);
+    width: 100%;
+}
+
+.bottom-footer {
+
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 100%;
+    border-top: 1px solid rgba(128, 128, 128, 0.1);
+    margin-top: -3px;
+
+}
+
 
