--- a/advance_search.css
+++ b/advance_search.css
@@ -17,7 +17,7 @@ a, ul {
 
 nav li {
     display: inline;
-    font-size: 10px;
+    font-size: 12px;
     margin-right: 10px;
 }
 nav ul {
@@ -34,9 +34,8 @@ nav {
 .heading > p {
     color: #d93025;
     font-family: inherit;
-    /* font-weight: bold; */
     font-size: 20px;
-    margin: 30px 0px 25px 50px;
+    margin: 30px 0px 25px 45px;
 
 }
 
@@ -44,11 +43,112 @@ nav {
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
 }
 
-form {
-    margin: 40px 29px 0px 45px;
-}
 
 .field-head  {
     font-size: 16px;
 }
 
+
+
+form {
+    margin: 45px 35px 30px 45px;
+    display: flex;
+    flex-direction: row;
+}
+
+
+.field1  {
+    margin-top: 30px;
+
+}
+
+.field3_ {
+    font-weight: lighter;
+   
+
+}
+.field3 {
+    margin-left: 10px;
+    margin-top: 32px;
+    font-size: 10px;
+}
+
+
+#l-field {
+    margin-right: 30px;
+}
+
+#r-field {
+    margin-left: 5px;
+}
+
+
+.mid-field {
+    height: 20px;
+    width: 555px;
+    margin-bottom: 17px;
+}
+
+
+#m-field{
+    margin-top: 30px;
+    /* display: flex;
+    justify-content: end; */
+}
+
+input[type="submit"] {
+    width: 103px;
+    box-sizing: border-box;
+    height: 25px;
+    background-color: #4d90fe;
+    color: #fff;
+    
+    
+    font-size: 10px;
+    border: 1px solid #4d90fe;
+
+}
+
+#btn {
+    
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+footer li {
+    display: inline-block;
+    overflow: auto;
+    margin-left: 26px;
+   
+}
+
+
+.above-footer {
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.l-footer {
+    font-size: 12px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0px;
+    background-color: #f2f2f2;
+    border-top: 1px solid rgba(128, 128, 128, 0.1);
+    width: 100%;
+    margin-bottom: 10px;
+    padding-top: 10px;
+}
+
+.bottom-footer {
+    display: flex;
+    align-items: flex-end;
+    /* justify-content: space-between; */
+    width: 100%;
+    border-top: 1px solid rgba(128, 128, 128, 0.1);
+    padding-top: 10px;
+
+}
