--- a/search_page.css
+++ b/search_page.css
@@ -129,18 +129,12 @@ footer li {
     margin-left: -40px;
     margin-bottom: 5px;
     font-size: 15px;
-    
-
+    padding-bottom: 5px;
 }
 
 
 .l-footer, .r-footer {
-
-    /* position: fixed;
-    bottom: -7px; */
     font-size: 14px;
-    
-  
 }
 
 .l-footer {
