--- a/image_search.css
+++ b/image_search.css
@@ -22,6 +22,12 @@ nav li {
     display: inline;
     float: right; 
     margin: 10px 11px;
+    font-size: 15px;
+
+}
+
+#advance-search-link {
+    margin-right: 15px;
 }
 
 
